CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- Added support for STATE: messages
	  (printer-state-reasons), printer-state-history, and
	  printer-state-time to the scheduler.
	- When using RunAsUser, the scheduler would initially
	  start any previously queued (pending) jobs with
	  RunAsUser disabled - all backends would be running as
	  root.
	- If a backend failed for a printer, CUPS would
	  incorrectly requeue the job for printing again.
	- Added support for IPP collections and files.
	- Added experimental support for generic CGI scripts and
	  programs, Java, Perl, PHP, and Python to the
	  scheduler. See the file "CGI.txt" for more
	  information.
	- The CUPS API now supports HTTP cookies and the Expect:
	  field.
	- The cancel command now correctly supports the "-u
	  user" option to cancel all jobs for the named user.
	- The Purge-Jobs operation now supports the my-jobs
	  boolean attribute and a new purge-jobs boolean
	  attribute to control whether job history data is
	  purged from the scheduler; the default is false for
	  my-jobs and true for purge-jobs to match the original
	  implementation.
	- The scheduler would not timeout printers when only
	  using SLP browsing.
	- If the scheduler was unable to execute a filter, it
	  would try to restart the job indefinitely until the
	  filter could be executed.
	- When writing BSD printcap files, the scheduler now
	  includes the rm and rp attributes, allowing the file
	  to be exported to LPD clients. [Patch from Dominic
	  Kubla]
	- The scheduler optimization to reference IPP attribute
	  data instead of performing a full copy caused problems
	  when the referenced data was deleted before it was
	  sent.  It now only references attributes that change
	  only when the scheduler is restarted.  The change also
	  reduced the memory footprint of a printer object to
	  2k.
	- The scheduler now holds signals while logging messages
	  to avoid potential deadlock issues when handling